Fix some margins

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
                     completely online. We offer several beginner friendly
                     courses that are taken by 300,000+ registered users.
                 </p>
-                <p id="">We also offer 2 industry-focused bootcamps:</p>
+                <p>We also offer 2 industry-focused bootcamps:</p>
 
                 <ol>
                     <li>
